# bluelog

./: .dockerignore  .flaskenv  .gitignore  pyproject.toml
bluelog/: __init__.py  commands.py  emails.py  extensions.py  fakes.py  forms.py  models.py  settings.py  utils.py
bluelog/static/css/: style.css
bluelog/static/js/: script.js
bluelog/templates/: base.html
bluelog/templates/admin/: edit_category.html  edit_link.html  edit_post.html  manage_category.html  manage_comment.html  manage_link.html  manage_post.html  new_category.html  new_link.html  new_post.html  settings.html
bluelog/templates/auth/: login.html
bluelog/templates/blog/: _posts.html  _sidebar.html  about.html  category.html  post.html
bluelog/templates/errors/: 400.html  404.html  500.html
bluelog/views/: admin.py  auth.py  blog.py  errors.py
